@@ -16,6 +16,7 @@ xine-lib (1.0.1)
   * added limited support for character entities to the XML parser
   * fixed support of icecast 2 server
   * fixed some memleaks related to DVD playback and MPEG PES
+  * fixed PNG/MNG image distortion and incorrect colouring
 
 xine-lib (1.0)
   * unbreak DXR3 plugin
